<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu" />

        <item
            android:id="@+id/food-customise"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/food_customise" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/orders" />

        <item
            android:id="@+id/change_password"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/changePassword"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>



</menu>
