<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_2"
    tools:context="com.example.oem.ecommerce.Activity.LoginActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/button_color">

                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/edt_phone"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/forget_passowrd"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/forget_passowrd"
                     />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/button_color">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/edt_password"
                android:hint="@string/password"
                android:textColorHint="@color/forget_passowrd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/forget_passowrd"/>
        </android.support.design.widget.TextInputLayout>

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/Remember_me"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:backgroundTint="@color/button_color"
            android:layout_gravity="center"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:paddingTop="15sp"
            android:textSize="20sp"
            android:textColor="@color/forget_passowrd"
            android:gravity="center"/>

        <TextView
            android:id="@+id/new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_register"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingTop="10sp"
            android:textColor="@color/forget_passowrd"
            />


    </LinearLayout>


</RelativeLayout>
