<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <fragment
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_auto_complete"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>

             <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:id="@+id/edtComment"
                android:hint="@string/comment"
                app:met_textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:text=""
                android:textSize="20sp"
                android:inputType="textMultiLine"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_delivery_method"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:text="@string/cash_on_delivery"
                    android:id="@+id/COD"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paypal"
                    android:id="@+id/paypal"/>


            </RadioGroup>
        </LinearLayout>




</android.support.v7.widget.CardView>