<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context="com.example.oem.ecommerce.Activity.Splash">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/chives_a_food_delivery_app"
        android:gravity="center"
        android:textSize="25sp"
        android:id="@+id/txtView"
        android:textColor="@color/colorPrimary"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtView"
        android:id="@+id/login"
        android:layout_gravity="center"
        android:layout_marginStart="106dp"
        android:layout_marginTop="152dp"
        android:background="@color/colorPrimary"
        android:text="@string/_login" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/login"
        android:layout_gravity="center"
        android:id="@+id/register"
        android:layout_marginTop="44dp"
        android:background="@color/colorPrimary"
        android:text="@string/register" />



</RelativeLayout>
