<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context="com.example.oem.ecommerce.Activity.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:paddingTop="20sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:paddingTop="20dp">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/edt_phone"
                android:hint="@string/phone_number"
                android:textColorHint="@color/forget_passowrd"
                android:inputType="number"
                android:maxLines="1"
                android:gravity="center"
                android:textColor="@color/forget_passowrd"
                android:textAlignment="center"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:paddingTop="20dp">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/edt_password"
                android:hint="@string/password"
                android:textColorHint="@color/forget_passowrd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:gravity="center"
                android:textColor="@color/forget_passowrd"
                android:textAlignment="center"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:paddingTop="20dp">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/edt_password_1"
                android:hint="@string/repassword"
                android:textColorHint="@color/forget_passowrd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:gravity="center"
                android:textColor="@color/forget_passowrd"
                android:textAlignment="center"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:text="@string/reset"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>
