<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_2"
    android:layout_width="match_parent"
    android:id="@+id/rootLayout"
    android:layout_height="match_parent"
    tools:context="com.example.oem.ecommerce.Activity.Cart">

     <android.support.v7.widget.RecyclerView
         android:id="@+id/cart_recycler"
         android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

     </android.support.v7.widget.RecyclerView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_margin="8dp"
                android:id="@+id/linear"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="9"
                        android:text="@string/Rs"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="9"
                        android:text="@string/_100"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placeOrder"
                android:textColor="@color/colorPrimary"
                android:layout_margin="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_alignParentBottom="true"
                android:text="@string/placeOrder"
                />
        </RelativeLayout>



    </android.support.v7.widget.CardView>


</RelativeLayout>
