<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">


    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_margin="8dp"
        android:background="@color/bgRowBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/delete_icon"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/delete_icon"
            android:text="@string/Swipe_to_delete"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:id="@+id/viewForeground"
        android:background="@android:color/white"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cart_item_name"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/food_01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cart_item_price"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/_100"/>
        </LinearLayout>

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/quantity"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            app:backGroundColor="@color/colorPrimaryDark"
            app:finalNumber="20"
            app:initialNumber="1"
            app:textSize="12sp">

        </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>

    </LinearLayout>


</android.support.v7.widget.CardView>